make tooltips work on mobile and fix bugs where tooltips dont close

--- a/app/frontend/src/components/NameInfo.css
+++ b/app/frontend/src/components/NameInfo.css
@@ -5,6 +5,7 @@
   max-width: 16px;
   min-width: 16px;
   vertical-align: middle;
+  cursor: pointer;
 }
 
 .name-subinfo {
